[project]
name = "hexlet-code"
version = "0.1.0"
description = "This project is a collection of fun text-based adventure games. You'll explore worlds, solve puzzles, and make choices that affect the story."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even  = "brain_games.scripts.brain_even:main"
brain-calc  = "brain_games.scripts.brain_calc:main"
brain-gcd   = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
